--- a/gemini-competition/src/app/component/new-interview/new-interview.component.html
+++ b/gemini-competition/src/app/component/new-interview/new-interview.component.html
@@ -11,7 +11,7 @@
       <div class="col">
         <div *ngFor="let template of templates; let i = index" class="card my-3">
           <div class="card-body d-flex justify-content-between align-items-center">
-            <h5 class="card-title mb-0">{{template}}</h5>
+            <h5 class="card-title mb-0">{{template.name}}</h5>
             <div>
               <button class="btn btn-primary mr-2" (click)="generateLink(i)">Generar Link</button>
             </div>
