the UI of the interview is simplified, but it has a bug with the button

--- a/gemini-competition/src/app/component/interview/interview.component.html
+++ b/gemini-competition/src/app/component/interview/interview.component.html
@@ -1,11 +1,6 @@
 <div *ngIf="interviewData">
-    <h2>Entrevista con {{ interviewData.name }}</h2>
-    <div *ngFor="let question of interviewData.questions.questions; let i = index" [hidden]="currentQuestionIndex !== i">
-      <p>{{ question.question }}</p>
-      <button (click)="generateVoice(question.question)">Escuchar Pregunta</button>
-      <button (click)="startRecording()">Grabar Respuesta</button>
-      <button (click)="stopRecording()" [disabled]="!isRecording">Detener Grabación</button>
-      <button (click)="nextQuestion()" [disabled]="!isRecordingStopped">Siguiente</button>
-    </div>
+  <h2>Entrevista con {{ interviewData.name }}</h2>
+  <div *ngFor="let question of interviewData.questions.questions; let i = index" [hidden]="currentQuestionIndex !== i">
+    <button (click)="stopRecording()">Detener Grabación</button>
   </div>
-  
+</div>
