--- a/gemini-competition/src/app/component/home/home.component.css
+++ b/gemini-competition/src/app/component/home/home.component.css
@@ -1,35 +1,40 @@
-/* Centrar el contenido verticalmente */
-.container {
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  form {
-    background: #f9f9f9;
-    padding: 40px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    width: 100%;
-  }
-  
-  h2 {
-    font-size: 2.5rem;
-    margin-bottom: 30px;
-  }
-  
-  button {
-    font-size: 1.2rem;
-  }
-  
-  /* Añadir espacio entre los botones secundarios */
-  .btn-secondary {
-    margin-top: 10px;
-  }
-  
-  /* Ajuste de márgenes para botones */
-  .d-flex > .btn {
-    margin: 0 5px;
-  }
-  
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #f9f9f9;
+}
+
+
+
+.interview-manager-container h1 {
+  font-size: 32px;
+  margin-bottom: 20px;
+}
+
+.interview-manager-container p {
+  font-size: 18px;
+  margin-bottom: 30px;
+  color: #666;
+}
+
+.input-group input {
+  border-radius: 0.25rem 0 0 0.25rem;
+  border: 1px solid #ddd;
+}
+
+.input-group button {
+  font-size: 18px;
+  border-radius: 0 0.25rem 0.25rem 0;
+  border: 1px solid #ddd;
+  background-color: #000;
+  color: #fff;
+}
+
+.btn-block {
+  width: 100%;
+  background-color: #f0f0f0;
+  color: #000;
+  border: none;
+
+
+}
