--- a/gemini-competition/src/app/component/home/home.component.html
+++ b/gemini-competition/src/app/component/home/home.component.html
@@ -1,20 +1,14 @@
-<div class="container mt-5">
-    <div class="row justify-content-center">
-      <div class="col-md-10 col-lg-8">
-        <h2 class="text-center mb-4">Componente Home</h2>
-        <form>
-          <div class="form-group">
-            <label for="interviewCode">Ingrese código de entrevista</label>
-            <input type="text" class="form-control" id="interviewCode" [(ngModel)]="interviewCode" name="interviewCode" (input)="onInputChange()" required>
-            <small *ngIf="interviewCode.trim().length === 0" class="form-text text-muted">El código es requerido.</small>
-          </div>
-          <button type="button" class="btn btn-primary btn-block mt-3" [disabled]="!isButtonEnabled" (click)="ingresar()">Ingresar</button>
-        </form>
-        <div class="mt-4 d-flex justify-content-around">
-          <button type="button" class="btn btn-secondary btn-lg flex-fill mr-2" (click)="nuevaEntrevista()">Nueva entrevista</button>
-          <button type="button" class="btn btn-secondary btn-lg flex-fill ml-2" (click)="verResultados()">Ver resultados</button>
-        </div>
-      </div>
+<div class="container vh-100 d-flex justify-content-center align-items-center">
+  <div class="interview-manager-container text-center p-5 border rounded shadow-sm bg-white">
+    <h1>Interview Manager</h1>
+    <p>Streamline your interview process with ease.</p>
+    
+    <div class="input-group mb-3">
+      <input type="text" class="form-control" placeholder="Enter Interview Code" [(ngModel)]="interviewCode">
+      <button class="btn btn-dark" (click)="ingresar()">Enter</button>
     </div>
+    
+    <button class="btn btn-secondary btn-block mb-2" (click)="verResultados()">View Results</button>
+    <button class="btn btn-secondary btn-block" (click)="nuevaEntrevista()">Create Interview</button>
   </div>
-  
+</div>
