--- a/gemini-competition/src/app/component/new-interview/new-interview.component.html
+++ b/gemini-competition/src/app/component/new-interview/new-interview.component.html
@@ -1,23 +1,31 @@
+<div class="modal" [class.show]="isModalOpen" (click)="closeModal()">
+  <div class="modal-content" (click)="$event.stopPropagation()">
+    <h2>Ingrese el nombre</h2>
+    <input type="text" [(ngModel)]="inputName" placeholder="Nombre">
+    <button class="btn btn-primary" (click)="submitName()">Aceptar</button>
+  </div>
+</div>
+<div class="modal-backdrop" [class.show]="isModalOpen"></div>
+
 <div class="container mt-5">
-    <div class="row align-items-center">
-      <div class="col">
-        <h2>Component new-interview</h2>
-      </div>
-      <div class="col-auto">
-        <button class="btn btn-success" (click)="addTemplate()">Nueva Plantilla</button>
-      </div>
+  <div class="row align-items-center">
+    <div class="col">
+      <h2>Component new-interview</h2>
     </div>
-    <div class="row">
-      <div class="col">
-        <div *ngFor="let template of templates; let i = index" class="card my-3">
-          <div class="card-body d-flex justify-content-between align-items-center">
-            <h5 class="card-title mb-0">{{template.name}}</h5>
-            <div>
-              <button class="btn btn-primary mr-2" (click)="generateLink(i)">Generar Link</button>
-            </div>
+    <div class="col-auto">
+      <button class="btn btn-success" (click)="addTemplate()">Nueva Plantilla</button>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <div *ngFor="let template of templates; let i = index" class="card my-3">
+        <div class="card-body d-flex justify-content-between align-items-center">
+          <h5 class="card-title mb-0">{{template.name}}</h5>
+          <div>
+            <button class="btn btn-primary mr-2" (click)="openModal(i)">Generar Link</button>
           </div>
         </div>
       </div>
     </div>
   </div>
-  
+</div>
