--- a/gemini-competition/src/app/component/temp-ui/temp-ui.component.css
+++ b/gemini-competition/src/app/component/temp-ui/temp-ui.component.css
@@ -139,3 +139,47 @@ body {
   margin-left: 10px;
   color: white;
 }
+
+
+@keyframes volumeLevelJiggle {
+  0% {
+      transform: scaleY(0.8)
+  }
+  50% {
+      transform: scaleY(1)
+  }
+  to {
+      transform: scaleY(0.8)
+  }
+}
+
+.parent {
+  background-color: rgba(26,115,232);
+  color: #fff;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  text-align: center;
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
+  font-size: 16px;
+  padding: 4px;
+}
+
+
+
+.child {
+background-color: currentColor;
+border-radius: 0.125em/0.125em;
+height: 0.25em;
+width: 0.25em;
+will-change: height,transform;
+z-index: 1;
+animation: volumeLevelJiggle 600ms steps(9,jump-none) 0s infinite;
+transition: height 200ms steps(6,jump-none);
+margin: 0 1px;
+}
