preparation of interview component to update the UI is initiated

--- a/gemini-competition/src/app/component/interview/interview.component.html
+++ b/gemini-competition/src/app/component/interview/interview.component.html
@@ -4,3 +4,13 @@
     <button (click)="stopRecording()">Detener Grabación</button>
   </div>
 </div>
+
+
+<div *ngIf="isUserTurn; else systemTurn">
+  <p>Es tu turno para hablar. Por favor, responde la pregunta.</p>
+  <button (click)="stopRecording()">Detener grabación</button>
+</div>
+
+<ng-template #systemTurn>
+  <p>El sistema está hablando. Por favor, espera...</p>
+</ng-template>
