--- a/gemini-competition/src/app/app.component.html
+++ b/gemini-competition/src/app/app.component.html
@@ -1,2 +1,18 @@
+<mat-toolbar color="primary" class="mat-elevation-z4 custom-toolbar">
+    <button mat-button routerLink="/home" class="logo">
+        <span class="app-name">Talent Pro</span>
+    </button>
+
+    <span class="spacer"></span>
+
+    <div class="center-buttons">
+        <button mat-button routerLink="/home" routerLinkActive="active-button">Home</button>
+        <button mat-button routerLink="/template-results" routerLinkActive="active-button">View Results</button>
+        <button mat-button routerLink="/new-interview" routerLinkActive="active-button">Create Interview</button>
+    </div>
+
+    <span class="spacer"></span>
+</mat-toolbar>
+
 <app-loader></app-loader>
 <router-outlet></router-outlet>
