--- a/gemini-competition/src/app/app.component.html
+++ b/gemini-competition/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" class="mat-elevation-z4 custom-toolbar">
+<mat-toolbar *ngIf="showToolbar" color="primary" class="mat-elevation-z4 custom-toolbar">
     <button mat-button routerLink="/home" class="logo">
         <span class="app-name">Talent Pro</span>
     </button>
