--- a/gemini-competition/src/app/component/home/home.component.css
+++ b/gemini-competition/src/app/component/home/home.component.css
@@ -26,7 +26,7 @@ body {
   font-size: 18px;
   border-radius: 0 0.25rem 0.25rem 0;
   border: 1px solid #ddd;
-  background-color: #000;
+  background-color: #1A6DDE;
   color: #fff;
 }
 
