--- a/gemini-competition/src/app/component/new-interview/new-interview.component.html
+++ b/gemini-competition/src/app/component/new-interview/new-interview.component.html
@@ -1,8 +1,8 @@
 <div class="modal" [class.show]="isModalOpen" (click)="closeModal()">
   <div class="modal-content" (click)="$event.stopPropagation()">
-    <h2>Ingrese el nombre</h2>
-    <input type="text" [(ngModel)]="inputName" placeholder="Nombre">
-    <button class="btn btn-primary" (click)="submitName()">Aceptar</button>
+    <h2>Enter the candidate's name</h2>
+    <input type="text" [(ngModel)]="inputName" placeholder="Name">
+    <button class="btn btn-primary" (click)="submitName()">Accept</button>
   </div>
 </div>
 <div class="modal-backdrop" [class.show]="isModalOpen"></div>
@@ -10,10 +10,10 @@
 <div class="container mt-5">
   <div class="row align-items-center">
     <div class="col">
-      <h2>Component new-interview</h2>
+      <h2>Interview templates</h2>
     </div>
     <div class="col-auto">
-      <button class="btn btn-success" (click)="addTemplate()">Nueva Plantilla</button>
+      <button class="btn btn-success" (click)="addTemplate()">New Template</button>
     </div>
   </div>
   <div class="row">
@@ -22,7 +22,7 @@
         <div class="card-body d-flex justify-content-between align-items-center">
           <h5 class="card-title mb-0">{{template.name}}</h5>
           <div>
-            <button class="btn btn-primary mr-2" (click)="openModal(i)">Generar Link</button>
+            <button class="btn btn-primary mr-2" (click)="openModal(i)">Generate Link</button>
           </div>
         </div>
       </div>
