--- a/gemini-competition/src/app/component/template-results/template-results.component.css
+++ b/gemini-competition/src/app/component/template-results/template-results.component.css
@@ -5,11 +5,11 @@
   
   .card-title {
     font-size: 1.25rem;
-    font-weight: bold;
   }
   
   .btn {
     margin-right: 0.5rem;
+    background-color: #1A6DDE;
   }
   
   .mt-5 {
@@ -28,3 +28,8 @@
     margin-bottom: 10px;
   }
   
+
+  .container
+  {
+    padding-top: 5%;
+  }
