--- a/gemini-competition/src/app/component/template-results/template-results.component.html
+++ b/gemini-competition/src/app/component/template-results/template-results.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
     <div class="row align-items-center">
       <div class="col">
-        <h2>Resultados de las Plantillas de Entrevista</h2>
+        <h2>Interview Template Results</h2>
       </div>
     </div>
     <div class="row">
@@ -10,16 +10,8 @@
           <div class="card-body d-flex justify-content-between align-items-center">
             <h5 class="card-title mb-0">{{template.name}}</h5>
             <div>
-              <button class="btn btn-secondary" (click)="goToInterviewResults(template.id, template.name)">Ver Resultados</button>
+              <button class="btn btn-secondary" (click)="goToInterviewResults(template.id, template.name)">View Results</button>
             </div>
-          </div>
-          <div *ngIf="results[template.id]" class="mt-3">
-            <h6>Resultados:</h6>
-            <ul>
-              <li *ngFor="let result of results[template.id]">
-                {{result.candidateName}} - {{result.score}} puntos ({{result.interviewDate | date}})
-              </li>
-            </ul>
           </div>
         </div>
       </div>
