Minor bug fixed

--- a/gemini-competition/src/app/app.component.css
+++ b/gemini-competition/src/app/app.component.css
@@ -1,6 +1,7 @@
 .custom-toolbar {
     background-color: #C2DAFF;
     color: #1A1A1A;
+    z-index: 1030;
     position: fixed;
     top: 20px;
     left: 50%;
