--- a/gemini-competition/src/app/component/login/login.component.html
+++ b/gemini-competition/src/app/component/login/login.component.html
@@ -16,7 +16,7 @@
                           <label for="exampleInputPassword1" class="form-label">Password</label>
                           <input type="password" class="form-control" name="password" [(ngModel)]="password">
                         </div>
-                        <button type="button" class="btn btn-info" (click)="login()">Login</button>
+                        <button type="button" style="background-color: #1A6DDE; color: white;" class="btn btn-info" (click)="login()">Login</button>
                         <div class="row">
                             <div class="col-md-6">
                                 <a href="/register" style="text-decoration: none;">Need Account ? <span class="text-danger">Register</span></a>
